--- a/EcomKart/src/main/resources/application.properties
+++ b/EcomKart/src/main/resources/application.properties
@@ -1,15 +1,2 @@
 spring.application.name=EcomKart
-server.port=5353
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/ecomkart
-spring.datasource.username=root
-spring.datasource.password=root
-
-# Driver Class Name
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA (Hibernate) Properties
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
+spring.profiles.active=prod
